Post about moving to S3

--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ owner:
   avatar: http://pbs.twimg.com/profile_images/513460490006048768/gyngPwgT.jpeg
   bio: "cloud native, platform 3, devops, community, evangelism, vmware stuff"
   email: matt@cowger.us
-  disqus-shortname: vmsarefreeright
+  disqus-shortname: vmsarefree
   twitter: mcowger
   facebook: mcowger
   google:
