--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Exaforge
 description: Cloud, DevOps, Evagelism
 email: matt@cowger.us
-url: "https://mcowger.github.io" # the base hostname & protocol for your site
+url: "http://mcowger.github.io" # the base hostname & protocol for your site
 #favicon
 favicon: /favicon.png
 
@@ -13,6 +13,8 @@ github_username:  mcowger
 
 #linkedin
 linkedin_username: mcowger
+
+repository: mcowger/mcowger.github.io
 
 #google analytics
 #google_analytics_id : UA-53386152-2
