Fix egregious spelling error

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Exaforge
-description: Cloud, DevOps, Evagelism
+description: Cloud, DevOps, Evangelism
 email: matt@cowger.us
 url: "http://mcowger.github.io" # the base hostname & protocol for your site
 #favicon
